<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/error" />

                <TextView
                    android:id="@+id/textViewErrorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/an_error_has_just_occured"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
                    app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
                    app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

                <TextView
                    android:id="@+id/textViewErrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textViewErrorLabel"
                    app:layout_constraintStart_toStartOf="@+id/textViewErrorLabel"
                    app:layout_constraintTop_toBottomOf="@+id/textViewErrorLabel"
                    tools:text="Error" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerFrameLayoutMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:shimmer_auto_start="true"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:contentDescription="@string/user_profile_picture"
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textViewUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:minEms="7"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewName"
                        tools:text="andraantariksa" />

                    <LinearLayout
                        android:id="@+id/linearLayoutMiscInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:divider="@drawable/divider8dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingStart="64dp"
                        android:paddingEnd="64dp"
                        android:showDividers="middle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:minEms="10"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        tools:text="Andra Antariksa Prihadi" />

                    <TextView
                        android:id="@+id/textViewBio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="200"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        app:layout_constraintEnd_toEndOf="@+id/textViewUsername"
                        app:layout_constraintStart_toStartOf="@+id/textViewUsername"
                        app:layout_constraintTop_toBottomOf="parent"
                        tools:text="@tools:sample/lorem/random" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:divider="@drawable/divider8dp"
                        android:orientation="horizontal"
                        android:showDividers="middle"
                        app:layout_constraintEnd_toEndOf="@+id/textViewUsername"
                        app:layout_constraintStart_toStartOf="@+id/textViewUsername"
                        app:layout_constraintTop_toBottomOf="@+id/textViewUsername">

                        <TextView
                            android:id="@+id/textViewFollowerLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers" />

                        <TextView
                            android:id="@+id/textViewFollowerCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-4dp"
                            tools:text="13"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewFollowingLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following" />

                        <TextView
                            android:id="@+id/textViewFollowingCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-4dp"
                            tools:text="13"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayoutTabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMiscInfo">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following" />

                    </com.google.android.material.tabs.TabLayout>

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager2Content"
                        android:layout_width="0dp"
                        android:layout_height="300dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tabLayoutTabs" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/favorite" />
</androidx.constraintlayout.widget.ConstraintLayout>